--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 /node_modules
-/public/hot
-/public/images/products/
-/public/images/retailers/
-/public/storage
 /storage/*.key
 /vendor
+/public/images/products/*
+/public/images/retailers/*
 .env
 .phpunit.result.cache
 Homestead.json
